[package]
name        = "pactus-jsonrpc"
version     = "{{ VERSION }}"
edition     = "2021"
description = "Rust client for interacting with the Pactus blockchain via JSON-RPC"
authors     = [ "Pactus Development Team <info@pactus.org>" ]
license     = "MIT"
homepage    = "https://pactus.org"
repository  = "https://github.com/pactus-project/pactus"
keywords    = [ "pactus", "blockchain", "json-rpc" ]

[dependencies]
jsonrpsee = { version = "0.26", default-features = false, features = ["http-client"] }
serde = { version = "1.0", default-features = false, features = ["derive", "std"] }
serde_json = { version = "1.0", default-features = false, features = ["std"] }
derive_builder = { version = "0.20", default-features = false, features = ["std"] }
